--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "admins": [
-        ""
+        "100095352395064"
     ],
     "Prefix": [
-        "#"
+        "*"
     ],
-    "botName": "",
+    "CHUPOTT 👾🖕": "",
     
     "mongoUri": ""
 }
